--- a/site/templates/twig/items/itm/xrefs/xrefs-table.twig
+++ b/site/templates/twig/items/itm/xrefs/xrefs-table.twig
@@ -3,7 +3,7 @@
 	-------------------------------------------------
 	item                   ItemMasterItem
 #}
-<table class="table table-sm">
+<table class="table table-sm xrefs">
 	<tr>
 		<td>
 			<a href="{{ page.xrefUrlUpcx(item.itemid) }}" class="link">UPC X-Refs</a>
