FIX: hide component tree because of recurssive items

--- a/site/templates/twig/items/itm/xrefs/bom/bom/display.twig
+++ b/site/templates/twig/items/itm/xrefs/bom/bom/display.twig
@@ -18,7 +18,7 @@
 		</div>
 	</div>
 	<div id="tree" class="card-body collapse">
-		{% include 'items/itm/xrefs/bom/bom/tree.twig' %}
+		{# include 'items/itm/xrefs/bom/bom/tree.twig' #}
 	</div>
 	{% include 'items/itm/xrefs/bom/bom/components.twig' %}
 
