--- a/site/templates/twig/items/itm/xrefs/bom/bom/display.twig
+++ b/site/templates/twig/items/itm/xrefs/bom/bom/display.twig
@@ -29,7 +29,7 @@
 		<div class="d-flex justify-content-between align-items-center">
 			<div></div>
 			<div>
-				<a href="{{ page.bomExitUrl(kit.itemid) }}" class="btn btn-warning btn-sm">
+				<a href="{{ page.bomExitUrl(bomItem.itemid) }}" class="btn btn-warning btn-sm">
 					<i class="fa fa-times" aria-hidden="true"></i> Close
 				</a>
 			</div>
