FIX: trigger field change to get descriptions

--- a/site/templates/twig/items/itm/xrefs/js.twig
+++ b/site/templates/twig/items/itm/xrefs/js.twig
@@ -116,7 +116,7 @@ $(function() {
 		e.preventDefault();
 		var button = $(this);
 		var modal  = button.closest('.modal');
-		$(modal.attr('data-input')).val(button.data('itemid'));
+		$(modal.attr('data-input')).val(button.data('itemid')).change();
 		modal.modal('hide');
 	});
 
