--- a/site/templates/twig/items/itm/xrefs/bom/component/display.twig
+++ b/site/templates/twig/items/itm/xrefs/bom/component/display.twig
@@ -1,3 +1,12 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	bmm                    Dplus\Mpm\Pmmain\Bmm
+	bomItem                BomItem
+	itm                    module Itm
+#}
+
 {% extends 'items/itm/display.twig' %}
 
 {% block body %}
