--- a/site/templates/twig/items/itm/xrefs/bom/bom/components.twig
+++ b/site/templates/twig/items/itm/xrefs/bom/bom/components.twig
@@ -4,6 +4,7 @@
 	page                   ProcessWire\Page
 	bmm                    Dplus\Mpm\Pmmain\Bmm
 	bomItem                BomItem
+	itm                    module Itm
 #}
 {% set response = bmm.getResponse() %}
 
@@ -14,9 +15,13 @@
 			<th>Description</th>
 			<th class="text-right">Usage Rate</th>
 			<th class="text-center">
-				<a href="{{ page.bomComponentUrl(bomItem.itemid, 'new') }}" class="btn btn-sm btn-light">
-					<i class="fa fa-plus" aria-hidden="true"></i> Add
-				</a>
+				{% if itm.recordlocker.isLocked(bomItem.itemid) == false or itm.recordlocker.userHasLocked(bomItem.itemid) %}
+					<a href="{{ page.bomComponentUrl(bomItem.itemid, 'new') }}" class="btn btn-sm btn-light">
+						<i class="fa fa-plus" aria-hidden="true"></i> Add
+					</a>
+				{% else %}
+					&nbsp;
+				{% endif %}
 			</th>
 		</tr>
 	</thead>
@@ -35,18 +40,22 @@
 					{{ component.qty }}
 				</td>
 				<td class="text-center">
-					{% if bmm.recordlocker.isLocked(bomItem.itemid) == false or bmm.recordlocker.userHasLocked(bomItem.itemid) %}
-						<a href="{{ page.bomComponentUrl(bomItem.itemid, component.itemid) }}" class="btn btn-sm btn-warning">
-							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-						</a>
-						&nbsp;
-						<a href="{{ page.bomComponentDeleteUrl(bomItem.itemid, component.itemid) }}" class="btn btn-sm btn-danger delete_button" data-component="{{ component.itemid }}">
-							<i class="fa fa-trash" aria-hidden="true"></i> Delete
-						</a>
+					{% if itm.recordlocker.isLocked(bomItem.itemid) == false or itm.recordlocker.userHasLocked(bomItem.itemid) %}
+						{% if bmm.recordlocker.isLocked(input.get.text('itemID')) == false or bmm.recordlocker.userHasLocked(bomItem.itemid) %}
+							<a href="{{ page.bomComponentUrl(bomItem.itemid, component.itemid) }}" class="btn btn-sm btn-warning">
+								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+							</a>
+							&nbsp;
+							<a href="{{ page.bomComponentDeleteUrl(bomItem.itemid, component.itemid) }}" class="btn btn-sm btn-danger delete_button" data-component="{{ component.itemid }}">
+								<i class="fa fa-trash" aria-hidden="true"></i> Delete
+							</a>
+						{% else %}
+							<span class="badge badge-secondary">
+								<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ bmm.recordlocker.getLockingUser(bomItem.itemid) }}
+							</span>
+						{% endif %}
 					{% else %}
-						<span class="badge badge-secondary">
-							<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ bmm.recordlocker.getLockingUser(bomItem.itemid) }}
-						</span>
+						&nbsp;
 					{% endif %}
 				</td>
 			</tr>
