FEAT: verify itm lock before allowing edits

--- a/site/templates/twig/items/itm/xrefs/kim/kit/display.twig
+++ b/site/templates/twig/items/itm/xrefs/kim/kit/display.twig
@@ -1,7 +1,7 @@
 {% extends 'items/itm/display.twig' %}
 
 {% block body %}
-	{% include 'mki/kim/kit/components.twig' %}
+	{% include 'items/itm/xrefs/kim/kit/components.twig' %}
 {% endblock %}
 
 {% block footer %}
