--- a/site/templates/twig/items/cxm/list/customer.twig
+++ b/site/templates/twig/items/cxm/list/customer.twig
@@ -26,15 +26,7 @@
 			</th>
 			<th class="pt-3 pb-3 align-middle">Description</th>
 			<th class="pt-3 pb-3 text-center">
-				{% if input.get.offsetExists('custID') %}
-					<a href="{{ page.xrefNewUrl(input.get.text('custID')) }}" class="btn btn-sm btn-light">
-						<i class="fa fa-plus" aria-hidden="true"></i> Add Item
-					</a>
-				{% else %}
-					<button type="button" class="btn btn-sm btn-light" data-toggle="modal" data-target="#ajax-modal" title="Choose Customer to Add CXM" aria-label="Choose Customer to Add CXM" data-custid="{{ page.has('custID') ? page.custID : '' }}" data-search="customers">
-						<i class="fa fa-plus" aria-hidden="true"></i> Add Item
-					</button>
-				{% endif %}
+				{% include 'items/cxm/list/link-add.twig' %}
 			</th>
 		</tr>
 	</thead>
@@ -50,19 +42,7 @@
 					<td>{{ item.itemID }}</td>
 					<td>{{ item.item.description }}</td>
 					<td class="text-center">
-						{% if cxm.recordlocker.isLocked(cxm.get_recordlocker_key(item)) == false or cxm.recordlocker.userHasLocked(cxm.get_recordlocker_key(item)) %}
-							<a href="{{ page.xrefUrl(item.custid, item.custitemid) }}" class="btn btn-warning btn-sm">
-								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-							</a>
-							&nbsp; &nbsp;
-							<a href="{{ page.xrefDeleteUrl(item.custid, item.custitemid, item.itemid) }}" class="btn btn-danger btn-sm delete_button">
-								<i class="fa fa-trash" aria-hidden="true"></i> Delete
-							</a>
-						{% else %}
-							<span class="badge badge-secondary">
-								<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ cxm.recordlocker.getLockingUser(cxm.get_recordlocker_key(item)) }}
-							</span>
-						{% endif %}
+						{% include 'items/cxm/list/edit-buttons.twig' %}
 					</td>
 				</tr>
 			{% endfor %}
