--- a/site/templates/twig/items/itm/xrefs/cxm/list/list.twig
+++ b/site/templates/twig/items/itm/xrefs/cxm/list/list.twig
@@ -14,9 +14,9 @@
 			<th class="pt-3 pb-3 align-middle">Description</th>
 			<th class="pt-3 pb-3 align-middle">UoM</th>
 			<th class="pt-3 pb-3 align-middle text-center">
-				<a href="{{ page.xrefNewUrl(item.itemid) }}" class="btn btn-light btn-sm">
-					<i class="fa fa-plus" aria-hidden="true"></i> Add New
-				</a>
+				{% if itm.recordlocker.isLocked(item.itemid) == false or itm.recordlocker.userHasLocked(item.itemid) %}
+					{% include 'items/itm/xrefs/cxm/list/add-button.twig' %}
+				{% endif %}
 			</th>
 		</tr>
 	</thead>
@@ -35,18 +35,8 @@
 					<td>{{ item.description }}</td>
 					<td>{{ item.uom_customer }}</td>
 					<td class="text-center">
-						{% if cxm.recordlocker.isLocked(cxm.get_recordlocker_key(item)) == false or cxm.recordlocker.userHasLocked(cxm.get_recordlocker_key(item)) %}
-							<a href="{{ page.xrefUrl(item.custid, item.custitemid, item.itemid) }}" class="btn btn-warning btn-sm">
-								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-							</a>
-							&nbsp; &nbsp;
-							<a href="{{ page.xrefDeleteUrl(item.itemid, item.custid, item.custitemid) }}" class="btn btn-danger btn-sm remove-cxm-item">
-								<i class="fa fa-trash" aria-hidden="true"></i> Delete
-							</a>
-						{% else %}
-							<span class="badge badge-secondary">
-								<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ cxm.recordlocker.getLockingUser(cxm.get_recordlocker_key(item)) }}
-							</span>
+						{% if itm.recordlocker.isLocked(item.itemid) == false or itm.recordlocker.userHasLocked(item.itemid) %}
+							{% include 'items/itm/xrefs/cxm/list/edit-buttons.twig' %}
 						{% endif %}
 					</td>
 				</tr>
