Allow save of component even if header isn't there yet

--- a/site/templates/twig/items/itm/xrefs/bom/component/form.twig
+++ b/site/templates/twig/items/itm/xrefs/bom/component/form.twig
@@ -142,7 +142,7 @@
 				2. Is a new Item
 				NOTE: Only show delete if item already exists.
 			#}
-			{% if bmm.recordlocker.userHasLocked(bomItem.itemid) %}
+			{% if bmm.recordlocker.userHasLocked(bomItem.itemid) or bomItem.isNew() %}
 				<button type="submit" class="btn btn-success">
 					<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 				</button>
