--- a/site/templates/twig/mki/kim/kit/component/form.twig
+++ b/site/templates/twig/mki/kim/kit/component/form.twig
@@ -83,7 +83,7 @@
 					'name': 'suppliedby', 'selected_value': component.suppliedby,
 					'use_blank_option': true,
 					'show_value': true,
-					'use_blank_option': true,
+					'use_blank_option': false,
 					'options': kim.component.options_component_suppliedby(),
 					'class_add': [
 						'hazmat-step',
