--- a/site/templates/twig/items/itm/xrefs/substitutes/list/list.twig
+++ b/site/templates/twig/items/itm/xrefs/substitutes/list/list.twig
@@ -14,9 +14,11 @@
 			<th class="pt-3 pb-3 align-middle">Description</th>
 			<th class="pt-3 pb-3 align-middle">Same / Like</th>
 			<th class="pt-3 pb-3 align-middle text-center">
-				<a href="{{ page.subNewUrl(item.itemid) }}" class="btn btn-light btn-sm" >
-					<i class="fa fa-plus" aria-hidden="true"></i> Add Substitute
-				</a>
+				{% if itm.recordlocker.isLocked(item.itemid) == false or itm.recordlocker.userHasLocked(item.itemid) %}
+					<a href="{{ page.subNewUrl(item.itemid) }}" class="btn btn-light btn-sm" >
+						<i class="fa fa-plus" aria-hidden="true"></i> Add Substitute
+					</a>
+				{% endif %}
 			</th>
 		</tr>
 	</thead>
@@ -40,17 +42,23 @@
 					{{ sub.sameOrLikeDescription()|capitalize }}
 				</td>
 				<td class="text-center">
-					{% if itmSub.recordlocker.isLocked(itmSub.getrecordlockerkey(sub)) == false or itmSub.recordlocker.userHasLocked(itmSub.getrecordlockerkey(sub)) %}
-						<a href="{{ page.subUrl(sub.itemid, sub.subitemid) }}" class="btn btn-warning btn-sm">
-							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-						</a>
-						&nbsp; &nbsp;
-						<a href="{{ page.subDeleteUrl(sub.itemid, sub.subitemid) }}" class="btn btn-danger btn-sm delete_button">
-							<i class="fa fa-trash" aria-hidden="true"></i> Delete
-						</a>
+					{% if itm.recordlocker.isLocked(item.itemid) == false or itm.recordlocker.userHasLocked(item.itemid) %}
+						{% if itmSub.recordlocker.isLocked(itmSub.getrecordlockerkey(sub)) == false or itmSub.recordlocker.userHasLocked(itmSub.getrecordlockerkey(sub)) %}
+							<a href="{{ page.subUrl(sub.itemid, sub.subitemid) }}" class="btn btn-warning btn-sm">
+								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+							</a>
+							&nbsp; &nbsp;
+							<a href="{{ page.subDeleteUrl(sub.itemid, sub.subitemid) }}" class="btn btn-danger btn-sm delete_button">
+								<i class="fa fa-trash" aria-hidden="true"></i> Delete
+							</a>
+						{% else %}
+							<span class="badge badge-secondary">
+								<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ itmSub.recordlocker.getLockingUser(itmSub.getrecordlockerkey(sub)) }}
+							</span>
+						{% endif %}
 					{% else %}
 						<span class="badge badge-secondary">
-							<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ itmSub.recordlocker.getLockingUser(itmSub.getrecordlockerkey(sub)) }}
+							<i class="fa fa-lock" aria-hidden="true"></i> ITM Locked By {{ itm.recordlocker.getLockingUser(item.itemid) }}
 						</span>
 					{% endif %}
 				</td>
