--- a/site/templates/twig/items/itm/xrefs/substitutes/sub/form.twig
+++ b/site/templates/twig/items/itm/xrefs/substitutes/sub/form.twig
@@ -74,20 +74,23 @@
 	</div>
 	<div class="p-5"></div>
 	<div class="d-flex justify-content-between align-items-center">
-		{#
-			Only show Edit Actions if the Item is
-			1. Locked for editing by the User
-		#}
-		{% if sub.isNew() or itmSub.recordlocker.userHasLocked(itmSub.getrecordlockerkey(sub)) %}
-			<button type="submit" class="btn btn-success">
-				<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
-			</button>
-			{% if sub.isNew() == false %}
-				<a href="{{ page.subDeleteUrl(sub.itemid, sub.subitemid) }}" class="btn btn-danger delete_button">
-					<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
-				</a>
+		{% if itm.recordlocker.isLocked(item.itemid) == false or itm.recordlocker.userHasLocked(item.itemid) %}
+			{#
+				Only show Edit Actions if the Item is
+				1. Locked for editing by the User
+			#}
+			{% if sub.isNew() or itmSub.recordlocker.userHasLocked(itmSub.getrecordlockerkey(sub)) %}
+				<button type="submit" class="btn btn-success">
+					<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
+				</button>
+				{% if sub.isNew() == false %}
+					<a href="{{ page.subDeleteUrl(sub.itemid, sub.subitemid) }}" class="btn btn-danger delete_button">
+						<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
+					</a>
+				{% endif %}
 			{% endif %}
 		{% endif %}
+
 		<a href="{{ page.subListUrl(sub.itemid, sub.subitemid) }}" class="btn btn-warning">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
 		</a>
