--- a/site/templates/twig/items/itm/xrefs/mxrfe/list/list.twig
+++ b/site/templates/twig/items/itm/xrefs/mxrfe/list/list.twig
@@ -6,6 +6,7 @@
 	recordlocker           module RecordLockerUser
 	xrefs                  ItemXrefManufacturer[]|ObjectCollection
 #}
+
 <table class="table table-sm">
 	<thead>
 		<tr class="bg-dark text-white p-3">
@@ -13,9 +14,11 @@
 			<th class="pt-3 pb-3 align-middle">Mnfr / Comp Name</th>
 			<th class="pt-3 pb-3 align-middle">Mnfr/Comp Item ID</th>
 			<th class="pt-3 pb-3 text-center">
-				<a href="{{ page.xrefUrl('', 'new', item.itemid) }}" class="btn btn-light btn-sm">
-					<i class="fa fa-plus" aria-hidden="true"></i> Add New
-				</a>
+				{% if itm.recordlocker.isLocked(item.itemid) == false or itm.recordlocker.userHasLocked(item.itemid) %}
+					<a href="{{ page.xrefUrl('', 'new', item.itemid) }}" class="btn btn-light btn-sm">
+						<i class="fa fa-plus" aria-hidden="true"></i> Add New
+					</a>
+				{% endif %}
 			</th>
 		</tr>
 	</thead>
@@ -27,6 +30,7 @@
 				</td>
 			</tr>
 		{% endif %}
+
 		{% if xrefs.count() %}
 			{% for xref in xrefs %}
 				{% set class = mxrfe.get_recordlocker_key(xref) == page.focus ? 'highlight' : '' %}
@@ -36,18 +40,8 @@
 					<td>{{ xref.vendor.name }}</td>
 					<td>{{ xref.mnfritemid }}</td>
 					<td class="text-center">
-						{% if mxrfe.recordlocker.isLocked(mxrfe.get_recordlocker_key(xref)) == false or mxrfe.recordlocker.userHasLocked(mxrfe.get_recordlocker_key(xref)) %}
-							<a href="{{ page.xrefUrl(xref.vendorid, xref.vendoritemid, xref.itemid) }}" class="btn btn-warning btn-sm">
-								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-							</a>
-							&nbsp;
-							<a href="{{ page.xrefDeleteUrl(xref.vendorid, xref.vendoritemid, xref.itemid) }}" class="btn btn-danger btn-sm delete_button">
-								<i class="fa fa-trash" aria-hidden="true"></i> Delete
-							</a>
-						{% else %}
-							<span class="badge badge-secondary">
-								<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ mxrfe.recordlocker.getLockingUser(mxrfe.get_recordlocker_key(xref)) }}
-							</span>
+						{% if itm.recordlocker.isLocked(item.itemid) == false or itm.recordlocker.userHasLocked(item.itemid) %}
+							{% include 'items/mxrfe/list/vendor/actions/edit.twig' %}
 						{% endif %}
 					</td>
 				</tr>
