--- a/site/templates/twig/items/mxrfe/xref/form/form.twig
+++ b/site/templates/twig/items/mxrfe/xref/form/form.twig
@@ -18,23 +18,10 @@
 	</div>
 
 	<div class="d-flex justify-content-between align-xrefs-center">
-		{#
-			Only show Edit Actions if the Item is
-			1. Locked for editing by the User
-			2. Is a new Item
-			NOTE: Only show delete if xref already exists.
-		#}
-		{% if mxrfe.recordlocker.userHasLocked(mxrfe.get_recordlocker_key(xref)) or xref.isNew() %}
-			<button type="submit" class="btn btn-success">
-				<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
-			</button>
-
-			{% if xref.isNew() == false %}
-				<a href="{{ page.xrefDeleteUrl(xref.vendorid, xref.vendoritemid, xref.itemid) }}" class="btn btn-danger delete_button">
-					<i class="fa fa-trash" aria-hidden="true"></i> Delete
-				</a>
-			{% endif %}
-		{% endif %}
+		{% block edit_actions %}
+			{% include 'items/mxrfe/xref/form/edit-buttons.twig' %}
+		{% endblock %}
+		
 		<a href="{{ page.xrefExitUrl(xref) }}" class="btn btn-warning">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
 		</a>
