FIX: hide edit buttons if ITM is locked

--- a/site/templates/twig/items/itm/xrefs/upcx/form/display.twig
+++ b/site/templates/twig/items/itm/xrefs/upcx/form/display.twig
@@ -2,6 +2,10 @@
 
 {% block body %}
 	<div class="card-body">
-		{% include 'items/upcx/form/form.twig' %}
+		<div class="row">
+			<div class="col-sm-8">
+				{% include 'items/itm/xrefs/upcx/form/form.twig' %}
+			</div>
+		</div>
 	</div>
 {% endblock %}
