--- a/site/templates/twig/items/upcx/form/display.twig
+++ b/site/templates/twig/items/upcx/form/display.twig
@@ -12,7 +12,11 @@
 		{% endblock %}
 	</div>
 	<div class="card-body">
-		{% include 'items/upcx/form/form.twig' %}
+		<div class="row">
+			<div class="col-sm-8">
+				{% include 'items/upcx/form/form.twig' %}
+			</div>
+		</div>
 	</div>
 </div>
 <hr>
