--- a/site/templates/twig/items/itm/xrefs/xrefs-table.twig
+++ b/site/templates/twig/items/itm/xrefs/xrefs-table.twig
@@ -43,7 +43,7 @@
 		</td>
 		<td>
 			<div class="custom-control custom-checkbox">
-				<input type="checkbox" class="custom-control-input" id="is-bom" {{ item.hasBom() ? 'checked' : '' }}>
+				<input type="checkbox" class="custom-control-input" id="is-bom" {{ item.countBomSubComponents() ? 'checked' : '' }}>
 				<label class="custom-control-label" for="is-bom">{{ item.countBomSubComponents() }} Components</label>
 			</div>
 		</td>
