--- a/site/templates/twig/items/itm/xrefs/bom/bom/display.twig
+++ b/site/templates/twig/items/itm/xrefs/bom/bom/display.twig
@@ -12,13 +12,8 @@
 		<div class="d-flex justify-content-between align-items-center">
 			<div></div>
 			<h6 class="text-center text-white">Level: 1</h6>
-			<button class="btn btn-light btn-sm"  type="button" data-toggle="collapse" data-target="#tree" aria-expanded="false" aria-controls="tree">
-				Show Tree
-			</button>
+			<div></div>
 		</div>
-	</div>
-	<div id="tree" class="card-body collapse">
-		{# include 'items/itm/xrefs/bom/bom/tree.twig' #}
 	</div>
 	{% include 'items/itm/xrefs/bom/bom/components.twig' %}
 
