--- a/site/templates/twig/items/itm/xrefs/mxrfe/list/list.twig
+++ b/site/templates/twig/items/itm/xrefs/mxrfe/list/list.twig
@@ -6,6 +6,7 @@
 	recordlocker           module RecordLockerUser
 	xrefs                  ItemXrefManufacturer[]|ObjectCollection
 #}
+{% set response = mxrfe.getResponse() %}
 
 <table class="table table-sm">
 	<thead>
@@ -33,10 +34,10 @@
 
 		{% if xrefs.count() %}
 			{% for xref in xrefs %}
-				{% set class = mxrfe.get_recordlocker_key(xref) == page.focus ? 'highlight' : '' %}
+				{% set class = mxrfe.get_recordlocker_key(xref) == input.get.text('focus') ? 'highlight' : '' %}
 				{% set class = (response.key == mxrfe.get_recordlocker_key(xref) and response.has_success()) ? 'bg-success text-white' : class %}
 				<tr class="{{ class }}" data-mxrfe="{{ mxrfe.get_recordlocker_key(xref) }}">
-					<td>{{ xref.mnfrid }}</td>
+					<td>{{ xref.mnfrid }} -> {{ response.key }}</td>
 					<td>{{ xref.vendor.name }}</td>
 					<td>{{ xref.mnfritemid }}</td>
 					<td class="text-center">
