--- a/site/templates/twig/items/mxrfe/xref/form/key.twig
+++ b/site/templates/twig/items/mxrfe/xref/form/key.twig
@@ -11,6 +11,7 @@
 			{% include 'util/bootstrap/form/input-group.twig' with {
 					'inputgroup': {
 						'type': 'prepend',
+						'size': 'sm',
 						'attributes': {
 							'readonly': xref.mnfrid ? true : false,
 							'tabindex': xref.mnfrid ? '-1' : ''
@@ -65,18 +66,34 @@
 		<b>Our Item ID</b>
 	</div>
 	<div class="col-sm-8 item-col">
-		{% include 'util/form/input-with-modal-lookup.twig' with {
-				'name': 'itemID', 'value': xref.itemid,
-				'attributes': {
-					'readonly': xref.itemid ? true : false,
-					'tabindex': xref.itemid ? '-1' : '',
-				},
-				'modaltarget': '#ajax-modal',
-				'modaldescription': 'Search for / Choose Item',
-				'attributes_button': {
-					'data-search': 'item',
-					'data-lookupurl': page.search_lookupURL('items'),
-					'data-itemid': xref.itemid
+		{% include 'util/bootstrap/form/input-group.twig' with {
+				'inputgroup': {
+					'type': 'prepend',
+					'size': 'sm',
+					'attributes': {
+						'readonly': xref.mnfrid ? true : false,
+						'tabindex': xref.mnfrid ? '-1' : ''
+					},
+					'input': {
+						'name': 'itemID',
+						'value': xref.itemid,
+						'attributes': {
+							'readonly': xref.itemid ? true : false,
+							'tabindex': xref.itemid ? '-1' : '',
+						}
+					},
+					'button': {
+						'colorclass': 'btn-secondary',
+						'text': 'fa fa-search'|icon,
+						'attributes': {
+							'title': 'Search for / Choose Ite',
+							'data-toggle': 'modal',
+							'data-target': '#ajax-modal',
+							'data-lookupurl': page.search_lookupURL('items'),
+							'data-input': '#itemID',
+							'data-itemid': xref.itemid
+						}
+					}
 				}
 			}
 		%}
