FIX: revert back shortitemid after overwrite declined

--- a/site/templates/twig/items/itm/xrefs/form.twig
+++ b/site/templates/twig/items/itm/xrefs/form.twig
@@ -1,4 +1,4 @@
-{#
+``{#
 	var                    Description / Instance of
 	-------------------------------------------------
 	xrefs                  ProcessWire\WireData
@@ -27,7 +27,8 @@
 							'attributes': {
 								'placeholder': '',
 								'aria-label':  'Short Item ID',
-								'autocomplete': 'off'
+								'autocomplete': 'off',
+								'data-original': xrefs.cxm.xref_shortitem_exists(item.itemid) ? xrefs.cxm.xref_shortitem(item.itemid).custitemid : ''
 							}
 						}
 					}
