--- a/site/templates/twig/items/itm/xrefs/form.twig
+++ b/site/templates/twig/items/itm/xrefs/form.twig
@@ -1,4 +1,4 @@
-``{#
+{#
 	var                    Description / Instance of
 	-------------------------------------------------
 	xrefs                  ProcessWire\WireData
@@ -9,7 +9,7 @@
 	item                   ItemMasterItem
 	recordlocker           module RecordLockerUser
 #}
-<form action="{{ page.wire('input').url() }}" method="POST" id="itm-xrefs-form">
+<form action="{{ input.url() }}" method="POST" id="itm-xrefs-form">
 	<input type="hidden" name="action" value="update-itm-xrefs">
 	<input type="hidden" name="itemID" value="{{ item.itemid }}">
 
