FEAT: add highlighting to bom list

--- a/site/templates/twig/mpm/bmm/list/list.twig
+++ b/site/templates/twig/mpm/bmm/list/list.twig
@@ -24,7 +24,7 @@
 	</thead>
 	<tbody>
 		{% for bom in items %}
-			<tr>
+			<tr data-bomid="{{ bom.itemid }}">
 				<td>
 					{{ bom.itemid }}
 				</td>
