--- a/site/templates/twig/mpm/bmm/bread-crumbs.twig
+++ b/site/templates/twig/mpm/bmm/bread-crumbs.twig
@@ -22,7 +22,7 @@
 		</a>
 	</li>
 
-	{% if lastsegment == 'mpm' and values.offsetExists('bomID') == false %}
+	{% if lastsegment == 'bmm' and values.offsetExists('bomID') == false %}
 		<li class="breadcrumb-item active" aria-current="page">
 			<i class="fa fa-microchip" aria-hidden="true"></i> BMM
 		</li>
