--- a/site/templates/twig/mpm/bmm/bom/display.twig
+++ b/site/templates/twig/mpm/bmm/bom/display.twig
@@ -1,35 +1,13 @@
-{% set configIn = page.wire('modules').get('Dconfigs').config('in') %}
+{% extends 'mpm/bmm/display.twig' %}
 
-<div class="card mb-5">
-	{% block header %}
-		<div class="card-header">
-			<div class="row">
-				<div class="col-sm-2">
-					<strong>Item ID:</strong>
-				</div>
-				<div class="col-sm-4">
-					{{ configIn.useUppercaseItemid() ? bomItem.item.itemid|upper : bomItem.item.itemid  }}
-				</div>
-				<div class="col-sm-6">
-					{{ configIn.useUppercaseItemDesc() ? bomItem.item.description|upper : bomItem.item.description }}
-					{% if bomItem.item.description2 %}
-						<br>
-						{{ configIn.useUppercaseItemDesc() ? bomItem.item.description2|upper : bomItem.item.description2 }}
-					{% endif %}
-				</div>
-			</div>
+{% block body %}
+	{% include 'mpm/bmm/bom/components.twig' %}
+{% endblock %}
+
+{% block footer %}
+	<div class="card-footer">
+		<div class="d-flex justify-content-between align-items-center">
+
 		</div>
-	{% endblock %}
-
-	{% block body %}
-		{% include 'mpm/bmm/bom/components.twig' %}
-	{% endblock %}
-
-	{% block footer %}
-		<div class="card-footer">
-			<div class="d-flex justify-content-between align-items-center">
-
-			</div>
-		</div>
-	{% endblock %}
-</div>
+	</div>
+{% endblock %}
