REFACTOR: move js files to mpm/bmm/component

--- a/site/templates/twig/items/itm/xrefs/bom/component/form.twig
+++ b/site/templates/twig/items/itm/xrefs/bom/component/form.twig
@@ -7,155 +7,11 @@
 	component              BomComponent
 	itm                    module Itm
 #}
-{% set configPm = bmm.getConfigPm() %}
 
-<form action="{{ input.url() }}" method="POST" id="bom-component-form" data-new="{{ component.isNew() ? 'true' : 'false'}}">
-	<input type="hidden" name="action" value="update-component">
-	<input type="hidden" name="itemID" value="{{ input.get.text('itemID') }}">
-	<input type="hidden" name="bomID" value="{{ input.get.offsetExists('bomID') ? input.get.text('bomID') : input.get.text('itemID') }}">
+{% extends 'mpm/bmm/component/form.twig' %}
 
-	<div class="row form-group">
-		<div class="col-sm-3">
-			<label for="component">Component Item ID</label>
-		</div>
-		<div class="col-sm-6">
-			{% include 'util/bootstrap/form/input-group.twig' with {
-					'inputgroup': {
-						'type': 'prepend',
-						'size': 'sm',
-						'attributes': {
-							'readonly': component.isNew() == false,
-						},
-						'input': {
-							'name': 'component',
-							'value': component.itemid,
-							'attributes': {
-								'placeholder': '',
-								'aria-label':  'Component Item ID'
-							}
-						},
-						'button': {
-							'colorclass': 'btn-secondary',
-							'text': 'fa fa-search'|icon,
-							'attributes': {
-								'title': 'Search Items',
-								'data-toggle': 'modal',
-								'data-target': '#ajax-modal',
-								'data-lookupurl': page.search_lookupURL('items'),
-								'data-input': '#component'
-							}
-						}
-					}
-				}
-			%}
-			<small class="form-text text-muted description">{{ component.item.description }}</small>
-			<small class="form-text text-muted description2">{{ component.item.description2 }}</small>
-		</div>
-	</div>
-
-	<div class="row form-group">
-		<div class="col-sm-3">
-			<label>Unit of Measure</label>
-		</div>
-		<div class="col-sm-9">
-			<p class="form-control-plain-text form-control-sm">
-				<span class="uom-code">{{ component.item.unitofmsale.code }}</span> - <span class="uom-description">{{ component.item.unitofmsale.description }}</span>
-			</p>
-		</div>
-	</div>
-
-	<div class="row form-group">
-		<div class="col-sm-3">
-			<label for="qty">Usage Rate</label>
-		</div>
-		<div class="col-sm-2">
-			{% include 'util/bootstrap/form/input.twig' with {
-					'input': {
-						'type': 'number',
-						'name': 'qty',
-						'value': component.qty,
-						'size': 'sm',
-						'attributes': {
-							'aria-label':  'Component Usage Rate',
-							'readonly': configPm.scrapUnused() == false,
-							'tabindex': configPm.scrapUnused() == false ? '-1' : '',
-						},
-						'addclasses': [
-							'text-right'
-						]
-					}
-				}
-			%}
-		</div>
-	</div>
-
-	<div class="row form-group">
-		<div class="col-sm-3">
-			<label for="scrap">Scrap Unused</label>
-		</div>
-		<div class="col-sm-2">
-			{% include 'util/bootstrap/form/select-simple.twig' with {
-					'select': {
-						'name': 'scrap',
-						'value' : component.scrap,
-						'haskeys': true,
-						'size': 'sm',
-						'options': {'Y': 'Yes', 'N': 'No'},
-						'attributes': {
-							'readonly': configPm.useSerialBase() == false,
-							'tabindex': configPm.useSerialBase() == false ? '-1' : '',
-						}
-					}
-				}
-			%}
-		</div>
-	</div>
-
-	<div class="row form-group">
-		<div class="col-sm-3">
-			<label for="serialbase">Serial Nbr Base</label>
-		</div>
-		<div class="col-sm-2">
-			{% set allowSerialBase = configPm.useSerialBase() == true and component.isSerialized() == false %}
-			{% include 'util/bootstrap/form/select-simple.twig' with {
-					'select': {
-						'name': 'serialbase',
-						'value' : component.serialbase,
-						'haskeys': true,
-						'size': 'sm',
-						'options': {'': '', 'Y': 'Yes', 'N': 'No'},
-						'attributes': {
-							'readonly': allowSerialBase,
-							'tabindex': allowSerialBase ? '-1' : '',
-						}
-					}
-				}
-			%}
-		</div>
-	</div>
-
-	<div class="d-flex justify-content-between align-items-center">
-		{% if itm.recordlocker.isLocked(bomItem.itemid) == false or itm.recordlocker.userHasLocked(bomItem.itemid) %}
-			{#
-				Only show Edit Actions if the Item is
-				1. Locked for editing by the User
-				2. Is a new Item
-				NOTE: Only show delete if item already exists.
-			#}
-			{% if bmm.recordlocker.userHasLocked(bomItem.itemid) %}
-				<button type="submit" class="btn btn-success">
-					<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
-				</button>
-
-				{% if component.isNew() == false %}
-					<a href="{{ page.bomComponentDeleteUrl(bomItem.itemid, component.itemid) }}" class="btn btn-danger delete_button">
-						<i class="fa fa-trash" aria-hidden="true"></i> Delete
-					</a>
-				{% endif %}
-			{% endif %}
-		{% endif %}
-		<a href="{{ page.bomComponentExitUrl(bomItem.itemid, component.itemid) }}" class="btn btn-warning">
-			<i class="fa fa-times" aria-hidden="true"></i> Close
-		</a>
-	</div>
-</form>
+{% block crud_buttons %}
+	{% if itm.recordlocker.isLocked(bomItem.itemid) == false or itm.recordlocker.userHasLocked(bomItem.itemid) %}
+		{% include 'mpm/bmm/component/form/crud-buttons.twig' %}
+	{% endif %}
+{% endblock %}
