--- a/site/templates/twig/items/itm/xrefs/bom/bom/components.twig
+++ b/site/templates/twig/items/itm/xrefs/bom/bom/components.twig
@@ -6,59 +6,16 @@
 	bomItem                BomItem
 	itm                    module Itm
 #}
-{% set response = bmm.getResponse() %}
+{% extends 'mpm/bmm/bom/components.twig' %}
 
-<table class="table table-sm">
-	<thead>
-		<tr class="bg-dark text-white p-3">
-			<th>Component</th>
-			<th>Description</th>
-			<th class="text-right">Usage Rate</th>
-			<th class="text-center">
-				{% if itm.recordlocker.isLocked(bomItem.itemid) == false or itm.recordlocker.userHasLocked(bomItem.itemid) %}
-					<a href="{{ page.bomComponentUrl(bomItem.itemid, 'new') }}" class="btn btn-sm btn-light">
-						<i class="fa fa-plus" aria-hidden="true"></i> Add
-					</a>
-				{% else %}
-					&nbsp;
-				{% endif %}
-			</th>
-		</tr>
-	</thead>
-	<tbody>
-		{% for component in bomItem.getComponents() %}
-			{% set class = component.itemid == input.get.text('focus') ? 'highlight' : '' %}
-			{% set class = (response.hasSuccess() and response.key == [component.produces, component.itemid]|join(bmm.recordlocker.glue())) ? 'bg-success text-white' : class %}
+{% block add_button %}
+	{% if itm.recordlocker.isLocked(bomItem.itemid) == false or itm.recordlocker.userHasLocked(bomItem.itemid) %}
+		{% include 'mpm/bmm/bom/components/links-add.twig' %}
+	{% endif %}
+{% endblock %}
 
-			<tr class="{{ class }}">
-				<td>{{ component.itemid }}</td>
-				<td>
-					{{ component.item.description }} <br>
-					{{ component.item.description2 }}
-				</td>
-				<td class="text-right">
-					{{ component.qty }}
-				</td>
-				<td class="text-center">
-					{% if itm.recordlocker.isLocked(bomItem.itemid) == false or itm.recordlocker.userHasLocked(bomItem.itemid) %}
-						{% if bmm.recordlocker.isLocked(input.get.text('itemID')) == false or bmm.recordlocker.userHasLocked(bomItem.itemid) %}
-							<a href="{{ page.bomComponentUrl(bomItem.itemid, component.itemid) }}" class="btn btn-sm btn-warning">
-								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-							</a>
-							&nbsp;
-							<a href="{{ page.bomComponentDeleteUrl(bomItem.itemid, component.itemid) }}" class="btn btn-sm btn-danger delete_button" data-component="{{ component.itemid }}">
-								<i class="fa fa-trash" aria-hidden="true"></i> Delete
-							</a>
-						{% else %}
-							<span class="badge badge-secondary">
-								<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ bmm.recordlocker.getLockingUser(bomItem.itemid) }}
-							</span>
-						{% endif %}
-					{% else %}
-						&nbsp;
-					{% endif %}
-				</td>
-			</tr>
-		{% endfor %}
-	</tbody>
-</table>
+{% block crud_links %}
+	{% if itm.recordlocker.isLocked(bomItem.itemid) == false or itm.recordlocker.userHasLocked(bomItem.itemid) %}
+		{% include 'mpm/bmm/bom/components/links-edit.twig' %}
+	{% endif %}
+{% endblock %}
