--- a/site/templates/twig/mpm/bmm/bom/components.twig
+++ b/site/templates/twig/mpm/bmm/bom/components.twig
@@ -14,9 +14,9 @@
 			<th>Description</th>
 			<th class="text-right">Usage Rate</th>
 			<th class="text-center">
-				<a href="{{ page.bomComponentUrl(bomItem.itemid, 'new') }}" class="btn btn-sm btn-light">
-					<i class="fa fa-plus" aria-hidden="true"></i> Add
-				</a>
+				{% block add_button %}
+					{% include 'mpm/bmm/bom/components/links-add.twig' %}
+				{% endblock %}
 			</th>
 		</tr>
 	</thead>
@@ -35,19 +35,9 @@
 					{{ component.qty }}
 				</td>
 				<td class="text-center">
-					{% if bmm.recordlocker.isLocked(input.get.text('itemID')) == false or bmm.recordlocker.userHasLocked(bomItem.itemid) %}
-						<a href="{{ page.bomComponentUrl(bomItem.itemid, component.itemid) }}" class="btn btn-sm btn-warning">
-							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-						</a>
-						&nbsp;
-						<a href="{{ page.bomComponentDeleteUrl(bomItem.itemid, component.itemid) }}" class="btn btn-sm btn-danger delete_button" data-component="{{ component.itemid }}">
-							<i class="fa fa-trash" aria-hidden="true"></i> Delete
-						</a>
-					{% else %}
-						<span class="badge badge-secondary">
-							<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ bmm.recordlocker.getLockingUser(bomItem.itemid) }}
-						</span>
-					{% endif %}
+					{% block crud_links %}
+						{% include 'mpm/bmm/bom/components/links-edit.twig' %}
+					{% endblock %}
 				</td>
 			</tr>
 		{% endfor %}
