--- a/site/templates/twig/mpm/bmm/component/js.twig
+++ b/site/templates/twig/mpm/bmm/component/js.twig
@@ -39,11 +39,8 @@ $(function() {
 				}
 			});
 		}
-
-
-
-		// formVxm.populateItemData(input.val());
 	});
+
 /* =============================================================
 	Validation Methods
 ============================================================= */
@@ -59,6 +56,7 @@ $(function() {
 				min: 1,
 			},
 			component: {
+				required: true,
 				remote: {
 					url: '{{ page.jsonapiURL('mpm/validate/bmm/component/') }}',
 					type: "get",
